Fix testimonial slider vertical alignment

--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -7,6 +7,11 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+
+      .slide {
+        display: flex;
+        justify-content: center;
+      }
     }
   }
 }
